# ai-workshop-neural-networks

./: README.md  pyproject.toml
1. classification/: classification.ipynb
2. prediction/: prediction.ipynb
3. anomaly/: anomaly.ipynb
4. tflite/: tflite.ipynb
anomaly/creditcard/: anomaly_creditcard.ipynb  view
anomaly/sinusoid/: anomaly_sinusoid.ipynb
models/: model.tflite
models/model.pb/: fingerprint.pb  saved_model.pb
models/model.pb/variables/: variables.data-00000-of-00001  variables.index
prediction/: rnn.ipynb
