[tool.poetry]
name = "interay"
version = "0.1.0"
description = ""
authors = ["Robert Musters <robert.musters@cgi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
wrapt = "1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
